# Todo

./: .gitignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  制作计划.md  调研总结报告.md  项目功能与架构规划.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql  002_background.sql  003_comments.sql  004_activities.sql
src-tauri/src/: db.rs  lib.rs
src-tauri/src/commands/: activity_cmds.rs  board_cmds.rs  card_cmds.rs  column_cmds.rs  comment_cmds.rs  data_cmds.rs  mod.rs  project_cmds.rs  search_cmds.rs  settings_cmds.rs  subtask_cmds.rs  tag_cmds.rs
src-tauri/src/db/: activities.rs  boards.rs  cards.rs  columns.rs  comments.rs  migrations.rs  mod.rs  projects.rs  search.rs  subtasks.rs  tags.rs
src-tauri/src/models/: activity.rs  board.rs  card.rs  column.rs  comment.rs  export.rs  mod.rs  project.rs  search_result.rs  subtask.rs  tag.rs
src/components/: DescriptionEditor.tsx
src/components/editor/: RichTextEditor.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
src/hooks/: useActivities.ts  useBoard.ts  useCards.ts  useColumns.ts  useComments.ts  useKeyboardShortcuts.ts  useProjects.ts  useSearch.ts  useSubtasks.ts  useTags.ts
src/lib/: constants.ts  tauri-api.ts
src/routes/: BoardView.tsx  ProjectDetail.tsx  ProjectList.tsx  SearchPage.tsx
src/stores/: appStore.ts  boardStore.ts  dragStore.ts
src/styles/: globals.css
src/types/: activity.ts  board.ts  card.ts  column.ts  comment.ts  common.ts  index.ts  project.ts  search.ts  subtask.ts  tag.ts
(+3 files in other folders)
